--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "grunt": "~0.4.5",
     "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-copy": "^0.8.1",
+    "grunt-contrib-cssmin": "^2.2.1",
+    "grunt-contrib-uglify": "^3.1.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-sass": "^1.0.0",
     "grunt-serve": "^0.1.6",
